--- a/docs/faststore/docs/getting-started/3-faststore-cli.mdx
+++ b/docs/faststore/docs/getting-started/3-faststore-cli.mdx
@@ -2,11 +2,11 @@
 title: '3. FastStore CLI'
 ---
 
-The FastStore Command Line Interface (CLI) provides pre-configured scripts for starting, building, and developing FastStore projects. It also helps keep FastStore projects up to date with the [`@faststore/core`](/docs/getting-started/3-project-structure#faststorecore) package.
+The FastStore Command Line Interface (CLI) provides pre-configured scripts for starting, building, and developing FastStore projects. It also helps keep FastStore projects up to date with the [`@faststore/core`](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson) package.
 
 ## Running FastStore CLI on the project
 
-The CLI is automatically added as a dependency in your project's `package.json` file, so once you run `yarn install` during the [project setup](/docs/getting-started/2-setting-up-the-project), you can start using it in the project.
+The CLI is automatically added as a dependency in your project's `package.json` file, so once you run `yarn install` during the [project setup](https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project), you can start using it in the project.
 
 ## Installing FastStore CLI globally using `npm`
 
@@ -17,7 +17,7 @@ To use FastStore CLI commands globally on your machine, install the [`@faststore
 ```
 
 ## Default commands
-Below is a brief description of the default commands available in the FastStore CLI. For detailed information about each command, click the respective command name.
+Below is a brief description of the default commands available in the FastStore CLI. To view detailed information about each command, click its respective command name.
 
 > ⚠️ Running the commands through `yarn` is already enough to develop part of your store. However, to set up your project with Headless CMS and create new sections, you need to install the FastStore CLI and use its commands.
 
@@ -25,13 +25,13 @@ Below is a brief description of the default commands available in the FastStore 
 | ------------ | ----------- |
 | [`build`](#build) | Generates a production-ready storefront.  It compiles the project and optimizes it for production usage. |
 | [`cms-sync`](#cms-sync) | Syncs the `cms` folder of your FastStore project with [Headless CMS](). |
-| [`dev`](#dev) | Starts the project in the development environment and uses`http://localhost:3000` as server by default. It allows you to make changes to the project and see the results locally on your machine in real time without affecting the production environment. |
+| [`dev`](#dev) | Starts the project in the development environment and uses`http://localhost:3000` as server by default. It allows you to change the project and see the results locally on your machine in real-time without affecting the production environment. |
 | [`help`](#help) | Displays help for FastStore CLI commands. |
 | [`generate`](#generate) | Generates the GraphQL types and optimizations from the FastStore project. |
 | [`start`](#start) | Executes the FastStore project in the root directory and uses`http://localhost:3000` as server by default. |
 
 ### `dev`
-Starts the project in the development environment and uses `http://localhost:3000` as server by default. It allows you to make changes to the project and see the results locally on your machine in real time without affecting the production environment.
+Starts the project in the development environment and uses `http://localhost:3000` as server by default. This allows you to change the project and see the results locally on your machine in real-time without affecting the production environment.
 
 #### Usage
 
