Updated the steps of installation

--- a/docs/faststore/docs/getting-started/3-faststore-cli.mdx
+++ b/docs/faststore/docs/getting-started/3-faststore-cli.mdx
@@ -8,13 +8,21 @@ The FastStore Command Line Interface (CLI) provides pre-configured scripts for s
 
 The CLI is automatically added as a dependency in your project's `package.json` file, so once you run `yarn install` during the [project setup](https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project), you can start using it in the project.
 
-## Installing FastStore CLI globally using `npm`
+## Installing FastStore CLI globally
 
-To use FastStore CLI commands globally on your machine, install the [`@faststore/cli`](https://www.npmjs.com/package/@faststore/cli) using `npm`, and run the following command in the terminal:
+To use FastStore CLI commands globally on your machine, install the [`@faststore/cli`](https://www.npmjs.com/package/@faststore/cli) package by following these steps:
 
-```bash
-  npm install -g @faststore/cli
-```
+1. Open your terminal and run the following command to install `yarn` globally in your machine:
+
+  ```bash
+  npm install --global yarn
+  ```
+
+2. install the `@faststore/cli` by running the following command in the terminal:
+
+  ```bash
+  yarn global add @faststore/cli
+  ```
 
 ## Default commands
 Below is a brief description of the default commands available in the FastStore CLI. To view detailed information about each command, click its respective command name.
