Add "Back" link

--- a/docs/faststore/docs/getting-started/3-faststore-cli.mdx
+++ b/docs/faststore/docs/getting-started/3-faststore-cli.mdx
@@ -35,7 +35,6 @@ Below is a brief description of the default commands available in the FastStore 
 | [`cms-sync`](#cms-sync) | Syncs the `cms` folder of your FastStore project with [Headless CMS](). |
 | [`dev`](#dev) | Starts the project in the development environment and uses`http://localhost:3000` as server by default. It allows you to change the project and see the results locally on your machine in real-time without affecting the production environment. |
 | [`help`](#help) | Displays help for FastStore CLI commands. |
-| [`generate`](#generate) | Generates the GraphQL types and optimizations from the FastStore project. |
 | [`start`](#start) | Executes the FastStore project in the root directory and uses`http://localhost:3000` as server by default. |
 
 ### `dev`
@@ -51,6 +50,8 @@ Starts the project in the development environment and uses `http://localhost:300
   faststore dev
 ```
 
+<div align="right"> 🔼 <a href="#default-commands">Back</a></div>
+
 ### `build`
 Generates a production-ready storefront.  It compiles the project and optimizes it for production usage.
 
@@ -63,6 +64,8 @@ Generates a production-ready storefront.  It compiles the project and optimizes 
 ```bash 
   faststore build
 ```
+
+<div align="right"> 🔼 <a href="#default-commands">Back</a></div>
 
 ### `start`
 Executes the FastStore project in the root directory and uses `http://localhost:3000` as server by default.
@@ -77,6 +80,8 @@ Executes the FastStore project in the root directory and uses `http://localhost:
   faststore start
 ```
 
+<div align="right"> 🔼 <a href="#default-commands">Back</a></div>
+
 ### `cms-sync`
 Syncs the `cms` folder of your FastStore project with Headless CMS.
 
@@ -86,10 +91,11 @@ Syncs the `cms` folder of your FastStore project with Headless CMS.
   yarn faststore cms-sync
 ```
 
-
 ```bash 
   faststore cms-sync
 ```
+
+<div align="right"> 🔼 <a href="#default-commands">Back</a></div>
 
 ### `help`
 
@@ -104,3 +110,5 @@ Displays help for FastStore CLI commands.
 ```bash 
   faststore help [COMMAND] [-n]
 ```
+
+<div align="right"> 🔼 <a href="#default-commands">Back</a></div>
