fix closing tag

--- a/docs/faststore/docs/faststore-api/schema/objects.mdx
+++ b/docs/faststore/docs/faststore-api/schema/objects.mdx
@@ -2427,7 +2427,7 @@ Array of additional properties.
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
-The product's release date. Formatted using <a href="https://www.iso.org/iso-8601-date-and-time-format.html"> ISO 8601<a>. 
+The product's release date. Formatted using [ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html).
 
 </td>
 </tr>
