Fix typo and <tbody> closing tag

--- a/docs/faststore/docs/faststore-api/schema/queries.mdx
+++ b/docs/faststore/docs/faststore-api/schema/queries.mdx
@@ -4,7 +4,7 @@ title: "Queries"
 
 Arguments must be provided by the user.
 
-Arguments preeceded by an exclamation mark (`!`) are not nullable.
+Arguments preceded by an exclamation mark (`!`) are not nullable.
 
 ## Product
 
@@ -62,7 +62,7 @@ Product pagination argument, indicating the cursor corresponding with the item a
 
 </td>
 </tr>
-</thead>
+</tbody>
 </table>
 
 ## Collection
