Fix <tbody> tag

--- a/docs/faststore/docs/faststore-api/schema/mutations.mdx
+++ b/docs/faststore/docs/faststore-api/schema/mutations.mdx
@@ -41,7 +41,7 @@ Web session identifier.
 
 </td>
 </tr>
-</thead>
+</tbody>
 </table>
 
 ## Session
@@ -55,6 +55,7 @@ Web session identifier.
 <th align="left">Description</th>
 </tr>
 </thead>
+<tbody>
 <tr>
 <tr>
 <td colspan="2" valign="top"><strong>validateSession</strong></td>
