FastStore: Third-party scripts known issue

--- a/docs/faststore/docs/reference/project-structure/handling-third-party-scripts.mdx
+++ b/docs/faststore/docs/reference/project-structure/handling-third-party-scripts.mdx
@@ -6,6 +6,8 @@ In this guide, learn how to add third-party scripts to FastStore projects.
 
 Third-party scripts are elements embedded in a webpage but served from a different domain than the one the user visits. Examples of these scripts include social media buttons, video players, ads, analytics tools, and other elements contributing to a more dynamic and interactive web experience.
 
+> Currently, FastStore stores are having issues receiving Google Tag Manager events due to integration between FastStore and [Partytown](https://partytown.builder.io/). The team is already investigating to fix it. Meanwhile, Refer to the workaround available in the [known issue article](https://help.vtex.com/en/known-issues/gtm-scripts-are-not-loading-on-the-native-thirdparty-scripts--4hTYThw8092OCHhUIvpCAa).
+
 ## Before you begin
 
 <Steps>
