EDU-13342: Fix 'Button' use cases (button.mx)

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -693,9 +693,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 Use the `Button` component to communicate user actions on the following components:
 
-- Buy-now and add-to-cart buttons on [Product Cards](https://developers.vtex.com/docs/guides/faststore/molecules-product-card)
-- Call-to-action buttons on [Cards](https://developers.vtex.com/docs/guides/faststore/organisms-card)
-- Submit and/or withdraw actions on [Forms](https://developers.vtex.com/docs/guides/faststore/molecules-form)
+- `Buy now` and `Add to cart` buttons on [Product Cards](https://developers.vtex.com/docs/guides/faststore/molecules-product-card).
 - Submit and/or withdraw actions on [Modal](https://developers.vtex.com/docs/guides/faststore/molecules-modal) windows.
 
 ---
