--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -3,6 +3,8 @@ title: "Card"
 excerpt: Display some information divided into a body and a header.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/card-component___555627b06a9b8f6dfd0056637576dc8d.png
+components:
+  - Card.tsx
 ---
 
 Card displays some information divided into a body and a header.
