Fix props declaration

--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Card"
 excerpt: Display some information divided into a body and a header.
-sidebar_custom_props:
-  image: https://vtexhelp.vtexassets.com/assets/docs/src/card-component___555627b06a9b8f6dfd0056637576dc8d.png
 components:
   - Card.tsx
+sidebar_custom_props:
+  image: https://vtexhelp.vtexassets.com/assets/docs/src/card-component___555627b06a9b8f6dfd0056637576dc8d.png
 ---
 
 Card displays some information divided into a body and a header.
@@ -81,7 +81,7 @@ Follow the instructions in the [Importing FastStore UI component styles](/docs/c
 ---
 ## Props
 
-<CardPropsSection component="Card" />
+<ComponentPropsSection component="Card" />
 
 ---
 
