--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -9,6 +9,57 @@ sidebar_custom_props:
 
 Card displays some information divided into a body and a header.
 
+## Overview
+
+<Tabs items={['Example', 'Code']} defaultIndex="0">
+  <Tab>
+  <OverviewSection>
+    <Card
+      iconName="PlusCircle"
+      title="Card with Icon"
+      style={{width: '300px'}}>
+      <h1> First Product </h1>
+      <hr/>
+      <h1> Second Product </h1>
+    </Card>
+  </OverviewSection>
+
+  <OverviewSection>
+    <Card
+      title="Card without Icon"
+      style={{width: '300px'}}>
+      <h1> Message </h1>
+    </Card>
+  </OverviewSection>
+
+  </Tab>
+    ```tsx
+    <Card
+        iconName="PlusCircle"
+        title="Card with Icon"
+        style={{width: '300px'}}>
+        <h1> First Product </h1>
+        <hr/>
+        <h1> Second Product </h1>
+      </Card>
+    ```
+
+    ```tsx
+     <Card
+      title="Card without Icon"
+      style={{width: '300px'}}>
+      <h1> Message </h1>
+    </Card>
+    ```
+
+  <Tab>
+  Code Example
+
+  </Tab>
+</Tabs>
+
+---
+
 ## Import
 
 Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
