--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -7,9 +7,57 @@ sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/card-component___555627b06a9b8f6dfd0056637576dc8d.png
 ---
 
-Card displays some information divided into a body and a header.
+A basic card that divides the content into a header and body, making it ideal for showcasing products, messages, or any other store information.
 
 ---
+
+## Overview
+
+<Tabs items={['Example', 'Code']} defaultIndex="0">
+  <Tab>
+  <OverviewSection>
+    <Card
+      iconName="PlusCircle"
+      title="Card with Icon"
+      style={{width: '300px'}}>
+      <h1> First Product </h1>
+      <hr/>
+      <h1> Second Product </h1>
+    </Card>
+  </OverviewSection>
+
+{" "}
+<OverviewSection>
+  <Card title="Card without Icon" style={{ width: "300px" }}>
+    <h1> Message </h1>
+  </Card>
+</OverviewSection>
+
+  </Tab>
+    ```tsx
+    <Card
+        iconName="PlusCircle"
+        title="Card with Icon"
+        style={{width: '300px'}}>
+        <h1> First Product </h1>
+        <hr/>
+        <h1> Second Product </h1>
+      </Card>
+    ```
+
+    ```tsx
+     <Card
+      title="Card without Icon"
+      style={{width: '300px'}}>
+      <h1> Message </h1>
+    </Card>
+    ```
+
+  <Tab>
+  Code Example
+
+  </Tab>
+</Tabs>
 
 ## Import
 
