testing overview component

--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -18,9 +18,15 @@ A basic card that divides the content into a header and body, making it ideal fo
       iconName="PlusCircle"
       title="Card with Icon"
       style={{width: '300px'}}>
-      <h1> First Product </h1>
+      <div>
+        <h1>Name</h1>
+        <p><b>Jane Doe</b></p>
+      </div>
       <hr/>
-      <h1> Second Product </h1>
+      <div>   
+        <h1>Email</h1>
+        <p><b>jane@doe.com</b></p>
+      </div>
     </Card>
   </OverviewSection>
 
@@ -37,9 +43,15 @@ A basic card that divides the content into a header and body, making it ideal fo
         iconName="PlusCircle"
         title="Card with Icon"
         style={{width: '300px'}}>
-        <h1> First Product </h1>
-        <hr/>
-        <h1> Second Product </h1>
+        <div>
+        <h1>Name</h1>
+        <p><b>Jane Doe</b></p>        
+      </div>
+      <hr/>
+      <div>   
+        <h1>Email</h1>
+        <p><b>jane@doe.com</b></p>
+      </div>
       </Card>
     ```
 
