review overview component

--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -41,28 +41,19 @@ A basic card that divides the content into a header and body, making it ideal fo
     ```tsx
     <Card
         iconName="PlusCircle"
-        title="Card with Icon"
+        title="Edit profile"
         style={{width: '300px'}}>
         <div>
-        <h1>Name</h1>
-        <p><b>Jane Doe</b></p>        
+        <p>Name</p>
+        <p><b>Jane Doe</b></p>
       </div>
       <hr/>
-      <div>   
-        <h1>Email</h1>
+      <div>
+        <p>Email</p>
         <p><b>jane@doe.com</b></p>
       </div>
       </Card>
     ```
-
-    ```tsx
-     <Card
-      title="Card without Icon"
-      style={{width: '300px'}}>
-      <h1> Message </h1>
-    </Card>
-    ```
-
   <Tab>
   Code Example
 
