--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -16,15 +16,15 @@ A basic card that divides the content into a header and body, making it ideal fo
   <OverviewSection>
     <Card
       iconName="PlusCircle"
-      title="Card with Icon"
+      title="Edit profile"
       style={{width: '300px'}}>
       <div>
-        <h1>Name</h1>
+        <p>Name</p>
         <p><b>Jane Doe</b></p>
       </div>
       <hr/>
-      <div>   
-        <h1>Email</h1>
+      <div>
+        <p>Email</p>
         <p><b>jane@doe.com</b></p>
       </div>
     </Card>
@@ -37,14 +37,14 @@ A basic card that divides the content into a header and body, making it ideal fo
         title="Edit profile"
         style={{width: '300px'}}>
         <div>
-        <p>Name</p>
-        <p><b>Jane Doe</b></p>
-      </div>
-      <hr/>
-      <div>
-        <p>Email</p>
-        <p><b>jane@doe.com</b></p>
-      </div>
+          <p>Name</p>
+          <p><b>Jane Doe</b></p>
+        </div>
+        <hr/>
+        <div>
+          <p>Email</p>
+          <p><b>jane@doe.com</b></p>
+        </div>
       </Card>
     ```
   <Tab>
