Fix: <CH.Scrollycoding> tag

--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -17,6 +17,8 @@ This guide describes how to handle data from a Contact Us form and send it to a 
 
 ## Implementation
 
+<CH.Scrollycoding>
+
 ### Creating GraphQL files
 
 First, you need to set up the necessary GraphQL files to handle data submissions.
