testing old docs

--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Adding a contact form to a landing page"
-slug: "adding-a-contact-form-to-a-landing-page"
+slug: 'adding-a-contact-form-to-a-landing-page'
 hidden: false
 createdAt: "2024-07-17T18:10:15.623Z"
 updatedAt: "2024-08-30T18:10:15.623Z"
