--- a/docs/faststore/components/molecules/product-price.mdx
+++ b/docs/faststore/components/molecules/product-price.mdx
@@ -5,6 +5,7 @@ sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/product-price___90342b9516448a71008988620e629225.png
 components:
   - ProductPrice.tsx
+  - Price.tsx
 ---
 
 The `ProductPrice` component displays product's listing and spot price.
