--- a/docs/faststore/components/molecules/product-price.mdx
+++ b/docs/faststore/components/molecules/product-price.mdx
@@ -8,7 +8,7 @@ components:
   - Price.tsx
 ---
 
-The `ProductPrice` component displays product's listing and spot price.
+The Product Price component displays product's listing and spot price.
 It wraps two [Price](https://developers.vtex.com/docs/guides/faststore/atoms-price) components.
 
 ## Overview
