fix closing tag

--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -23,7 +23,7 @@ A basic card that divides the content into a header and body, making it ideal fo
         <hr />
         <h1> Second Product </h1>
       </Card>
-    </OverviewSection>{" "}
+    </OverviewSection>
     <OverviewSection>
       <Card title="Card without Icon" style={{ width: "300px" }}>
         <h1> Message </h1>
