--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -19,30 +19,33 @@ A basic card that divides the content into a header and body, making it ideal fo
         title="Card with Icon"
         style={{ width: "300px" }}
       >
-        <h1> First Product </h1>
+        <h1>First Product</h1>
         <hr />
-        <h1> Second Product </h1>
+        <h1>Second Product</h1>
       </Card>
     </OverviewSection>
     <OverviewSection>
       <Card title="Card without Icon" style={{ width: "300px" }}>
-        <h1> Message </h1>
+        <h1>Message</h1>
       </Card>
     </OverviewSection>
   </Tab>
-  ```tsx
-  <Card iconName="PlusCircle" title="Card with Icon" style={{ width: "300px" }}>
-    <h1> First Product </h1>
-    <hr />
-    <h1> Second Product </h1>
-  </Card>
-  ``` ```tsx
-  <Card title="Card without Icon" style={{ width: "300px" }}>
-    <h1> Message </h1>
-  </Card>
-  ```
-  <Tab>Code Example</Tab>
-</Tabs>;
+  <Tab>
+    ```tsx
+    <Card iconName="PlusCircle" title="Card with Icon" style={{ width: "300px" }}>
+      <h1>First Product</h1>
+      <hr />
+      <h1>Second Product</h1>
+    </Card>
+    ```
+
+    ```tsx
+    <Card title="Card without Icon" style={{ width: "300px" }}>
+      <h1>Message</h1>
+    </Card>
+    ```
+  </Tab>
+</Tabs>
 
 ---
 
