--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -11,39 +11,50 @@ A basic card that divides the content into a header and body, making it ideal fo
 
 ## Overview
 
-<Tabs items={["Example", "Code"]} defaultIndex="0">
+<Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
-    <OverviewSection>
-      <Card
+  <OverviewSection>
+    <Card
+      iconName="PlusCircle"
+      title="Card with Icon"
+      style={{width: '300px'}}>
+      <h1> First Product </h1>
+      <hr/>
+      <h1> Second Product </h1>
+    </Card>
+  </OverviewSection>
+
+  <OverviewSection>
+    <Card
+      title="Card without Icon"
+      style={{width: '300px'}}>
+      <h1> Message </h1>
+    </Card>
+  </OverviewSection>
+
+  </Tab>
+    ```tsx
+    <Card
         iconName="PlusCircle"
         title="Card with Icon"
-        style={{ width: "300px" }}
-      >
-        <h1>First Product</h1>
-        <hr />
-        <h1>Second Product</h1>
+        style={{width: '300px'}}>
+        <h1> First Product </h1>
+        <hr/>
+        <h1> Second Product </h1>
       </Card>
-    </OverviewSection>
-    <OverviewSection>
-      <Card title="Card without Icon" style={{ width: "300px" }}>
-        <h1>Message</h1>
-      </Card>
-    </OverviewSection>
-  </Tab>
-  <Tab>
-    ```tsx
-    <Card iconName="PlusCircle" title="Card with Icon" style={{ width: "300px" }}>
-      <h1>First Product</h1>
-      <hr />
-      <h1>Second Product</h1>
-    </Card>
     ```
 
     ```tsx
-    <Card title="Card without Icon" style={{ width: "300px" }}>
-      <h1>Message</h1>
+     <Card
+      title="Card without Icon"
+      style={{width: '300px'}}>
+      <h1> Message </h1>
     </Card>
     ```
+
+  <Tab>
+  Code Example
+
   </Tab>
 </Tabs>
 
@@ -75,7 +86,7 @@ Follow the instructions in the [Importing FastStore UI component styles](/docs/c
   <Card title="Card without Icon" style={{ width: "300px" }}>
     <h1> Message </h1>
   </Card>
-</OverviewSection>;
+</OverviewSection>
 
 ```tsx
 <Card
