add images to the code example

--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -66,9 +66,9 @@ Follow the instructions in the [Importing FastStore UI component styles](/docs/c
       iconName="PlusCircle"
       title="Card with Icon"
       style={{width: '300px'}}>
-      <h1> First Product </h1>
+      <img src="https://vtexhelp.vtexassets.com/assets/docs/src/earbuds___48a643df5d0d9cc3a98fe878573ad49d.png" />
       <hr/>
-      <h1> Second Product </h1>
+      <img src="https://vtexhelp.vtexassets.com/assets/docs/src/headphone___55354eade497364e28015d6e84ed900d.png" />
     </Card>
   </OverviewSection>
 
