--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -62,16 +62,15 @@ Follow the instructions in the [Importing FastStore UI component styles](/docs/c
 ## Usage
 
 <OverviewSection>
-  <Card
-    iconName="PlusCircle"
-    title="Card with Icon"
-    style={{ width: '300px', display: 'grid', placeItems: 'center' }}
-  >
-    <img src="https://vtexhelp.vtexassets.com/assets/docs/src/earbuds___48a643df5d0d9cc3a98fe878573ad49d.png" />
-    <hr />
-    <img src="https://vtexhelp.vtexassets.com/assets/docs/src/headphone___55354eade497364e28015d6e84ed900d.png" />
-  </Card>
-</OverviewSection>
+    <Card
+      iconName="PlusCircle"
+      title="Card with Icon"
+      style={{width: '300px'}}>
+      <img src="https://vtexhelp.vtexassets.com/assets/docs/src/earbuds___48a643df5d0d9cc3a98fe878573ad49d.png" style="width: 200px; height: 150px; border-radius: 10px;" />
+      <hr/>
+      <img src="https://vtexhelp.vtexassets.com/assets/docs/src/headphone___55354eade497364e28015d6e84ed900d.png" style="width: 200px; height: 150px; border-radius: 10px;" />
+    </Card>
+  </OverviewSection>
 
   <OverviewSection>
     <Card
