Add the Newsletter in the Organisms overview

--- a/docs/faststore/components/organisms/overview.mdx
+++ b/docs/faststore/components/organisms/overview.mdx
@@ -115,6 +115,15 @@ hideTOC: true
     </UIProvider>
   </CardItem>
   <CardItem
+    title="Newsletter"
+    description="The Newsletter component is a section with at least one input text with an action allowing users to submit their input."
+    actionPath="/docs/guides/faststore/organisms-newsletter"
+  >
+    <UIProvider>
+      <NewsletterUsage />
+    </UIProvider>
+  </CardItem>
+  <CardItem
     title="Out of Stock"
     description="Used to announce to users that the product is out of stock."
     actionPath="/docs/guides/faststore/organisms-out-of-stock"
