Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/components/organisms/overview.mdx
+++ b/docs/faststore/components/organisms/overview.mdx
@@ -116,7 +116,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Newsletter"
-    description="The Newsletter component is a section with at least one input text with an action allowing users to submit their input."
+    description="The `Newsletter` component is a section that features a text input field and an action button, allowing users to subscribe to updates and newsletters."
     actionPath="/docs/guides/faststore/organisms-newsletter"
   >
     <UIProvider>
@@ -124,7 +124,7 @@ hideTOC: true
     </UIProvider>
   </CardItem>
   <CardItem
-    title="Out of Stock"
+    title="OutOfStock"
     description="Used to announce to users that the product is out of stock."
     actionPath="/docs/guides/faststore/organisms-out-of-stock"
   >
