--- a/docs/faststore/components/index.mdx
+++ b/docs/faststore/components/index.mdx
@@ -3,7 +3,7 @@ title: "FastStore UI"
 hideTOC: true
 ---
 FastStore UI is designed and built following the [Atomic Design](https://bradfrost.com/blog/post/atomic-web-design/) pattern.
-Atomic Design breaks user interfaces hierarchically into smaller and simpler components and the FastStore components are classified in: **atoms, molecules, organisms** and **features**.
+Atomic Design breaks user interfaces hierarchically into smaller and simpler components, and the FastStore components are classified as **atoms**, **molecules**, **organisms**, and **features**.
 
 ## [Atoms](https://developers.vtex.com/docs/guides/faststore/atoms-overview)
 
@@ -692,6 +692,15 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   >
     <UIProvider>
       <NavbarSliderUsage />
+    </UIProvider>
+  </CardItem>
+  <CardItem
+    title="Newsletter"
+    description="The `Newsletter` component is a section that features a text input field and an action button, allowing users to subscribe to updates and newsletters."
+    actionPath="/docs/guides/faststore/organisms-newsletter"
+  >
+    <UIProvider>
+      <NewsletterUsage />
     </UIProvider>
   </CardItem>
   <CardItem
